[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seo-checker-ai-mcp"
version = "1.0.0"
description = "MEOK AI Labs — SEO analysis and optimization tools powered by MEOK AI Labs."
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "mcp-server", "model-context-protocol", "claude", "ai-tools", "meok-ai-labs", "seo", "search-engine-optimization", "meta-tags", "keyword-analysis", "page-rank"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/seo-checker-ai-mcp"
Documentation = "https://meok.ai/docs/seo-checker-ai-mcp"
"Bug Tracker" = "https://github.com/CSOAI-ORG/seo-checker-ai-mcp/issues"
