[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "seo-checker-ai-mcp"
version = "1.0.3"
readme = "README.md"
description = "Seo Checker Ai automation via MCP. Includes analyze title, check meta description, validate schema markup. By MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "seo", "checker"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/seo-checker-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
seo_checker_ai_mcp = "server:main"
